--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,6 @@ djangorestframework==3.16.0
 djangorestframework_simplejwt==5.5.0
 PyJWT==2.9.0
 sqlparse==0.5.3
+google-cloud-aiplatform==1.58.0
+python-decouple==3.8
+requests==2.32.3
